Prevent horizontal scrollbar from appearing in story editor

--- a/assets/src/stories-editor/components/editor-carousel/edit.css
+++ b/assets/src/stories-editor/components/editor-carousel/edit.css
@@ -11,6 +11,7 @@
 
 #amp-story-editor {
 	position: relative;
+	overflow: hidden;
 }
 
 #amp-story-editor > .editor-block-list__layout {
